--- a/water-my-plants/package.json
+++ b/water-my-plants/package.json
@@ -13,7 +13,8 @@
     "react-hook-form": "^4.10.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "reactstrap": "^8.4.1"
+    "reactstrap": "^8.4.1",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
